<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CryptoAndStocksApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome, John Doe</string>
    <string name="nav_header_subtitle">john.doe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="change_language">Change Language</string>
    <string name="homepage_title">Homepage</string>
    <string name="welcome_user">Welcome user</string>
    <string name="crypto_title">Crypto</string>
    <string name="chart_placeholder">Chart goes here</string>
    <string name="crypto_data_label">Crypto data</string>
    <string name="daily_change">Daily % change</string>
    <string name="stocks_title">Stocks</string>
    <string name="summary_title">Daily Summary</string>
    <string name="news_summary">News summary</string>
    <string name="crypto_icon">Crypto Icon</string>




    <string name="menu_home">Home</string>
    <string name="menu_gallery">Portoflio</string>
    <string name="menu_slideshow">News</string>
</resources>